--- a/Aula-3/index.html
+++ b/Aula-3/index.html
@@ -4,8 +4,22 @@
 <head>
     <title>Document</title>
 </head>
+
 <body>
+    <h1>Calculadora</h1>
+
+    <label for="nome"> Nome:</label>
+    <input type="text" id="nome">
+    <br>
+    <label for="peso"> Peso:</label>
+    <input type="number" id="number">
+    <br>
+    <button id="calcular">Calcular</button>
+    <span id="resultado"></span>
+
     <script src="script.js"></script>
+    <script src="calculo.js"></script>
+
 
 </body>
 
